# server-stats-api

./: Cargo.toml  flake.nix
src/: auth.rs  config.rs  main.rs
src/routes/: services.rs  stats.rs  system.rs
