[package]
name = "server-stats-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bcrypt = "0.19.0"
chrono = "0.4.44"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
pam = { version = "0.8.0", features = ["client"] }
rand = "0.10.0"
rustls = { version = "0.23.37", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
zbus = "5.14.0"
